# dcrm.rs

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  tailwind.css
assets/: main.css
src/: main.rs
src/components/: mod.rs  modals.rs  sidebar.rs  topbar.rs
src/models/: mod.rs
src/pages/: activities.rs  contacts.rs  dashboard.rs  deals.rs  mod.rs
src/state/: mod.rs
