[package]
name = "dcrm"
version = "0.1.0"
edition = "2024"
description = "Dirmacs CRM - A minimal, efficient customer relationship manager"
authors = ["Dirmacs"]
license = "MIT"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dioxus = { version = "0.7.1", features = ["desktop", "router"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
